kubernetes/apps/omada-controller/base/omada-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-controller
  namespace: omada
  labels:
    app: omada-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: omada-controller
  template:
    metadata:
      labels:
        app: omada-controller
    spec:
      securityContext:
        runAsUser: 550
        runAsGroup: 550
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: omada-controller
          image: ghcr.io/tinoha/omada-controller:6.2.10.17
          volumeMounts:
            - name: omada-logs
              mountPath: /opt/tplink/EAPController/logs
            - name: omada-data
              mountPath: /opt/tplink/EAPController/data
          ports:
            - containerPort: 8088
            - containerPort: 8043
            - containerPort: 8843
            - containerPort: 19810
              protocol: UDP
            - containerPort: 29810
              protocol: UDP
            - containerPort: 27001
              protocol: UDP
            - containerPort: 29811
            - containerPort: 29812
            - containerPort: 29813
            - containerPort: 29814
            - containerPort: 29815
            - containerPort: 29816
            - containerPort: 29817
          securityContext:
            runAsUser: 550
            runAsGroup: 550
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: true  # Required because tpeap must run as root; the container starts it via sudo.
      
      terminationGracePeriodSeconds: 300
      
      volumes:
        - name: omada-logs
          persistentVolumeClaim:
            claimName: omada-logs
        - name: omada-data
          persistentVolumeClaim:
            claimName: omada-data
