kubernetes/apps/omada-controller/base/omada-controller-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: omada-controller
  namespace: omada
  labels:
    app: omada-controller
spec:
  serviceName: omada-controller
  replicas: 1
  selector:
    matchLabels:
      app: omada-controller
  template:
    metadata:
      labels:
        app: omada-controller
    spec:
      containers:
        - name: omada-controller
          image: docker.io/tihal/omada-controller:latest
          volumeMounts:
            - name: omada-logs
              mountPath: /opt/tplink/EAPController/logs
            - name: omada-data
              mountPath: /opt/tplink/EAPController/data
          ports:
            - containerPort: 8088
            - containerPort: 8043
            - containerPort: 8843
            - containerPort: 19810
              protocol: UDP
            - containerPort: 29810
              protocol: UDP
            - containerPort: 27001
              protocol: UDP
            - containerPort: 29811
            - containerPort: 29812
            - containerPort: 29813
            - containerPort: 29814
            - containerPort: 29815
            - containerPort: 29816
          securityContext:
            runAsUser: 550
            runAsGroup: 550
            capabilities:
              add:
                - DAC_READ_SEARCH
                - SETGID
                - SETUID
                - NET_BIND_SERVICE
      terminationGracePeriodSeconds: 300
      volumes:
        - name: omada-logs
          persistentVolumeClaim:
            claimName: omada-logs
        - name: omada-data
          persistentVolumeClaim:
            claimName: omada-data
